# accloudtant

./: .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTORS.md  MANIFEST  README.md  environment.yml  pyproject.toml  requirements-2.7.txt  requirements-3.4.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: push.yaml  test.yaml
accloudtant/: __init__.py  __main__.py  usage_record.py  usage_records.py
accloudtant/aws/: __init__.py  instance.py  prices.py  reports.py  reserved_instance.py
accloudtant/aws/cloudfront/: __init__.py
accloudtant/aws/data_transfer/: __init__.py
accloudtant/aws/prices/: __init__.py
accloudtant/aws/reports/: __init__.py
accloudtant/aws/route53/: __init__.py
accloudtant/aws/s3/: __init__.py
accloudtant/aws/sqs/: __init__.py
accloudtant/prices/: __init__.py
accloudtant/prices/aws/: __init__.py
accloudtant/utils/: __init__.py
tests/: test_accloudtant.py  test_usage_records.py  test_utils.py
tests/aws/: conftest.py  print_expected.txt  print_expected_with_warnings.txt  report_expected.txt  report_running_expected.txt  report_running_expected_csv.txt  test_instance.py  test_prices.py  test_reports.py  test_reserved_instance.py
tests/fixtures/2021/03/: CF.csv  R53.csv  S3.csv  SQS.csv
tests/prices/: test_aws.py
